--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^1.3.1",
-    "babel-plugin-dynamic-import": "^1.0.0",
+    "@vue/test-utils": "^1.0.0-beta.16",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "jest": "^23.1.0",
+    "jest-serializer-vue": "^2.0.2",
     "node": "^10.3.0",
     "parcel-bundler": "^1.8.1",
+    "vue-jest": "^2.6.0",
     "vue-template-compiler": "^2.5.16"
   },
   "engines": {
