--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Ezekiel Mangalu <emangalu@jirnexu.com>",
   "private": true,
   "scripts": {
-    "dev": "parcel index.html",
+    "dev": "parcel watch index.html | nodemon server.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
@@ -15,6 +15,7 @@
     "vue": "./node_modules/vue/dist/vue.common.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "normalize.css": "^8.0.0",
     "vue": "^2.5.2",
     "vue-hot-reload-api": "^2.3.0",
@@ -27,9 +28,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "connect-history-api-fallback": "^1.5.0",
+    "express": "^4.16.3",
     "jest": "^23.1.0",
     "jest-serializer-vue": "^2.0.2",
     "node": "^10.3.0",
+    "nodemon": "^1.17.5",
     "parcel-bundler": "^1.8.1",
     "vue-jest": "^2.6.0",
     "vue-template-compiler": "^2.5.16"
