--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.3",
     "jest": "^23.1.0",
     "jest-serializer-vue": "^2.0.2",
+    "mongoose": "^5.1.4",
     "node": "^10.3.0",
     "nodemon": "^1.17.5",
     "parcel-bundler": "^1.8.1",
