--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "normalize.css": "^8.0.0",
     "vue": "^2.5.2",
     "vue-hot-reload-api": "^2.3.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^1.3.1",
