--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "connect-history-api-fallback": "^1.5.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jest": "^23.1.0",
     "jest-serializer-vue": "^2.0.2",
